# rpsBot

firstRust/: Cargo.toml
firstRust/src/: Bot.rs  main.rs
